[gd_scene load_steps=8 format=3 uid="uid://lu2gmqaoa7cy"]

[ext_resource type="Script" path="res://src/Boarder.gd" id="1_goqfq"]
[ext_resource type="Texture2D" uid="uid://rtde1nxj7k54" path="res://img/board_sprite.png" id="2_40ppf"]
[ext_resource type="Texture2D" uid="uid://bd1f2fl6e3t1t" path="res://img/spear_sprite.png" id="3_fl2k6"]
[ext_resource type="Script" path="res://tscn/spear.gd" id="3_fndci"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jt2fe"]
friction = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ebh8d"]
radius = 7.0
height = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovuj0"]
size = Vector2(73, 10)

[node name="Boarder" type="RigidBody2D"]
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_jt2fe")
contact_monitor = true
constant_torque = 400.0
script = ExtResource("1_goqfq")

[node name="BoardCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ebh8d")
one_way_collision_margin = 0.0

[node name="AnchorCast2D" type="RayCast2D" parent="."]
position = Vector2(-4.54747e-13, 0)

[node name="BoardSprite" type="Sprite2D" parent="."]
position = Vector2(-7.62939e-06, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_40ppf")

[node name="SpearZone" type="Area2D" parent="."]
position = Vector2(0, -20)
script = ExtResource("3_fndci")

[node name="SpearCollision" type="CollisionShape2D" parent="SpearZone"]
position = Vector2(36.1009, 0.0001297)
shape = SubResource("RectangleShape2D_ovuj0")

[node name="SpearSprite" type="Sprite2D" parent="SpearZone"]
position = Vector2(36.1009, 0.0001297)
rotation = 1.5708
scale = Vector2(1, 0.722018)
texture = ExtResource("3_fl2k6")

[node name="AttackTimer" type="Timer" parent="SpearZone"]

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="timeout" from="SpearZone/AttackTimer" to="SpearZone" method="_on_attack_timer_timeout"]
